# WhisperLiveKit

./: CRUSH.md  INTEGRATION_GUIDE.md  QUICKSTART.md  TRAY_APP_PRD.md  auto-type  auto_type_client.py  check_device_rates.py  debug_client.py  docker-compose.yml  n8n-webhook  n8n_webhook_client.py  pyproject.toml  python3.80s-157764,big-chungus.btr  python3.80s-184437,big-chungus.btr  python3.80s-247833,big-chungus.btr  start_dictation.sh  start_server.sh  stop_dictation.sh  stop_server.sh  voice_to_n8n.py  whisper.pid  whisperlivekit_complete_setup.sh
TonnyTray/: .dockerignore  .env.example  .gitignore  .prettierignore  .prettierrc.json  ARCHITECTURE.md  ARCHITECTURE_REVIEW.md  BACKEND_COMMANDS_SUMMARY.md  BACKEND_SUMMARY.md  BUILD.md  CHANGELOG.md  CODE_REVIEW.md  COMMAND_MAPPING.md  COMPLETION_REPORT_ISSUES_2_AND_3.md  COMPONENT_GUIDE.md  CONTRIBUTING.md  CRITICAL_ISSUES_SUMMARY.md  DEPLOYMENT.md  DEVELOPER_GUIDE.md  DEVOPS_FILES_CREATED.md  DEVOPS_QUICKREF.md  DEVOPS_SUMMARY.md  Dockerfile  EVENT_SYSTEM_IMPLEMENTATION.md  FRONTEND_ARCHITECTURE.md  FRONTEND_IMPLEMENTATION.md  IMPLEMENTATION_REPORT.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_VALIDATION.md  PRD.md  QA_SUMMARY.md  QA_VALIDATION_REPORT.md  QUICKSTART_IMPLEMENTATION.md  (+24 more)
TonnyTray/src-tauri/: .gitignore  Cargo.toml  QUICKSTART.md  README.md  tauri.conf.json
TonnyTray/src-tauri/benches/: performance_benchmarks.rs
TonnyTray/src-tauri/src/: audio.rs  config.rs  database.rs  elevenlabs.rs  events.rs  keychain.rs  lib.rs  main.rs  process_manager.rs  state.rs  tray.rs  websocket.rs
TonnyTray/src-tauri/tests/: config_tests.rs  integration_tests.rs  state_tests.rs
(+92 files in other folders)
